# dawg-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: codex_config.toml  smoke_test.py
src/dawg_mcp/: __init__.py  __main__.py  config.py  errors.py  server.py  session.py  snapshot.py  usage.py
src/dawg_mcp/tools/: __init__.py  account.py  browser.py  scraper.py
tests/: conftest.py  test_config.py  test_session.py  test_snapshot.py  test_tools_smoke.py
