[project]
name = "dawg-mcp"
version = "0.1.2"
description = "MCP server for the DAWG platform — remote stealth browser, scraping & account usage for AI agents. Built for Runet: Russian residential proxies and geolocation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DAWG" }]
keywords = ["mcp", "model-context-protocol", "browser", "playwright", "scraping", "dawg", "baas", "runet", "yandex", "russia"]
dependencies = [
  "mcp>=1.24.0",                  # FastMCP, Context, Image from mcp.server.fastmcp
  "playwright>=1.58,<2.0",        # bindings + bundled driver only; NO `playwright install` (remote CDP)
  "httpx>=0.27",                  # usage.py REST call
  "dawg-sdk-python>=0.3.0,<0.4",  # AsyncBaas, AsyncScraper, exceptions
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
dawg-mcp = "dawg_mcp.server:main"

[project.urls]
Homepage = "https://dawgswarm.ru"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dawg_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
